--- a/01 IoC 컨테이너/06 프로퍼티.md
+++ b/01 IoC 컨테이너/06 프로퍼티.md
@@ -61,80 +61,46 @@ propertyTestList: a,b,c
 
 **AutoConfigurationApplicationtests**     
 ```java
-package com.springboot.springboot;
+@SpringBootTest
+public class PropertiesBindingTest {
 
-import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.springframework.beans.factory.annotation.Value;
-import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.test.context.junit4.SpringRunner;
-
-import static org.hamcrest.Matchers.is;
-import static org.hamcrest.MatcherAssert.assertThat;
-
-import java.util.List;
-
-@RunWith(SpringRunner.class)
-@SpringBootTest(classes = {com.springboot.springboot.AutoConfigurationApplicationTests.class})
-public class AutoConfigurationApplicationTests {
-
-        @Value("${property.test.name}")
-        private String propertyTestName;
-
-        @Value("${propertyTest}")
-        private String propertyTest;
-
-        @Value("${noKey:default value}")
-        private String defaultValue;
-
-
-        @Value("${propertyTestList}")
-        private String [] propertyTestArray;
-
-        @Value("#{'${propertyTestList}'.split(',')}")
-        private List<String> propertyTestList;
+    @Value("${property.test.name}")
+    String propertyTestName;
+    
+    @Value("${propertyTest}")
+    String propertyTest;
+    
+    @Value("${noKey:default value}")
+    String defaultValue;
+    
+    @Value("${propertyTestList}")
+    String[] propertyTestArray;
+    
+    @Value("#{'${propertyTestList}'.split(',')}")
+    List<String> propertyTestList;
 
     @Test
-    public void contextLoads(){
-        assertThat(propertyTestName, is("property depth test"));
-
-        assertThat(propertyTest, is("test"));
-        assertThat(defaultValue, is("default value"));
-
-        assertThat(propertyTestArray[0], is("a"));
-        assertThat(propertyTestArray[1], is("b"));
-        assertThat(propertyTestArray[2], is("c"));
-
-        assertThat(propertyTestList.get(0), is("a"));
-        assertThat(propertyTestList.get(1), is("b"));
-        assertThat(propertyTestList.get(2), is("c"));
-
+    public void test() {
+        assertAll(
+                () -> assertThat(propertyTestName).isEqualTo("property depth test"),
+                () -> assertThat(propertyTest).isEqualTo("test"),
+                () -> assertThat(defaultValue).isEqualTo("default value"),
+                () -> assertThat(propertyTestArray).containsExactly("a", "b", "c"),
+                () -> assertThat(propertyTestList).containsExactly("a", "b", "c")
+        );
     }
-
 }
 ```
-책에서는 단순히 ```@SpringBootTest```로 되어있지만        
-최근에는 ```@SpringBootTest(classes = {com.springboot.springboot.AutoConfigurationApplicationTests.class})```로 바뀐 것 같다.        
-       
-```assertThat()```과 ```is()```는 ```import static```으로 받은 클래스의 메소드이다.       
-그렇기에 ```ctrl + space``` 추가하기는 어렵고 직접 import 에 타이핑을 해주어야 한다.       
-참고로 메소드가 아닌 중간의 클래스 이름만 치고 ```ctrl + space```로 추가하면 클래스의 패키지는 알아서 붙고 메소드만 입력해주면된다.      
+`@Value` 매핑 방식은 다음과 같다.     
 
-```asserThat()```의 첫번째 파라미터와 두번째 파라미터가 일치해야 테스트가 성공한다.        
-
-만약 에러가 아니라 테스트가 Run 자체가 실행이 안된다면          
-```IntelliJ IDEA``` 클릭 -> ```Preferences``` ->  ```Build, Execution, Deployment``` -> ``` run test using```을 ```intelliJ IDEA``` 로 바꾸면된다.      
-필자 같은 경우 테스트 Run 자체 에러가 나서 ```intelliJ IDEA```로 바꾸었다.         
-___
-```@Value``` 매핑 방식은 다음과 같다.   
-* ```@Value("${property.test.name}")``` : 깊이가 존재하는 키 값에 대해 ```.``` 로 구분하여 값을 매핑한다.   
-* ```@Value("${propertyTest}")``` : 단일 키값을 매핑한다.   
-* ```@Value("${noKey:default value}")``` : YAML 파일에 키값이 존재하지 않으면 디폴트값이 매핑되도록 설정합니다.    
-* ```@Value("${propertyTestList}")``` : 여러값을 나열할 때는 배열형으로 매핑합니다 ```(단순 키로 찾지만 값이 여러개면 배열 형태로 받음)```
-* ```@Value("#{'${propertyTestList}'.split(',')}")``` : SpEL을 사용하여 ```,``` 기준으로 List에 매핑한다.   
+* `@Value("${property.test.name}")` : 깊이가 존재하는 `key의 매칭값`에 대해 `.` 로 구분하여 값을 매핑한다.   
+* `@Value("${propertyTest}")` : 단일 키값을 매핑한다.   
+* `@Value("${noKey:default value}")` : YAML 파일에 키값이 존재하지 않으면 디폴트값이 매핑되도록 설정합니다.    
+* `@Value("${propertyTestList}")` : 여러값을 나열할 때는 배열형으로 매핑합니다 ```(단순 키로 찾지만 값이 여러개면 배열 형태로 받음)```
+* `@Value("#{'${propertyTestList}'.split(',')}")` : SpEL을 사용하여 ```,``` 기준으로 List에 매핑한다.   
        
 ```@Value```에서 유일하게 지원되는 기능인 SpEL을 사용하여 매핑하는 방법을 알아봤습니다.       
-간단하게 설명하자면 YAML 파일에서 설정한 키값을 ```@Value```의 프로퍼티 값으로 주면 해당 값이 필드값에 할당되는 방식입니다.          
+간단하게 설명하자면 YAML 파일에서 설정한 키값을 `@Value`의 프로퍼티 값으로 주면 해당 값이 필드값에 할당되는 방식입니다.          
 주로 단일 필드갑을 가져오는데 사용합니다.       
 
 ## 4.4. ```@ConfigurationProperties``` 살펴보기    
