--- a/01 IoC 컨테이너/06 프로퍼티.md
+++ b/01 IoC 컨테이너/06 프로퍼티.md
@@ -93,15 +93,15 @@ public class PropertiesBindingTest {
 ```
 `@Value` 매핑 방식은 다음과 같다.     
 
-* `@Value("${property.test.name}")` : 깊이가 존재하는 `key의 매칭값`에 대해 `.` 로 구분하여 값을 매핑한다.   
-* `@Value("${propertyTest}")` : 단일 키값을 매핑한다.   
-* `@Value("${noKey:default value}")` : YAML 파일에 키값이 존재하지 않으면 디폴트값이 매핑되도록 설정합니다.    
-* `@Value("${propertyTestList}")` : 여러값을 나열할 때는 배열형으로 매핑합니다 ```(단순 키로 찾지만 값이 여러개면 배열 형태로 받음)```
-* `@Value("#{'${propertyTestList}'.split(',')}")` : SpEL을 사용하여 ```,``` 기준으로 List에 매핑한다.   
-       
-```@Value```에서 유일하게 지원되는 기능인 SpEL을 사용하여 매핑하는 방법을 알아봤습니다.       
-간단하게 설명하자면 YAML 파일에서 설정한 키값을 `@Value`의 프로퍼티 값으로 주면 해당 값이 필드값에 할당되는 방식입니다.          
-주로 단일 필드갑을 가져오는데 사용합니다.       
+* `@Value("${property.test.name}")` : 깊이가 존재하는 `key`에 대해 `.` 로 구분하여 값을 매핑한다.   
+* `@Value("${propertyTest}")` : 단일 `key`에 매칭 되는 값을 매핑한다.   
+* `@Value("${noKey:default value}")` : YAML 파일에 키값이 존재하지 않으면 **디폴트값이 매핑**되도록 설정한다.    
+* `@Value("${propertyTestList}")` : 여러값을 나열할 때는 배열형으로 매핑한다 `(값이 여러개면 배열로받는다.)`   
+* `@Value("#{'${propertyTestList}'.split(',')}")` : **SpEL**을 사용하여 `,` 기준으로 List에 매핑한다.   
+    * `@Value`은 `@ConfigurationProperties`와 달리 `SpEL`을 사용할 수 있다.
+         
+`YAML 프로퍼티 파일`에서 설정한 `key/value`를    
+`@Value`의 프로퍼티 값으로 주면 해당 값이 필드값에 할당되는 방식이며 주로 단일 필드값을 가져오는데 사용한다.       
 
 ## 4.4. ```@ConfigurationProperties``` 살펴보기    
 ```@ConfigurationProperties```의 프로퍼티를 사용하여 다양한 형의 프로퍼티값을 매핑할 수 있습니다.       
