--- a/01 IoC 컨테이너/06 프로퍼티.md
+++ b/01 IoC 컨테이너/06 프로퍼티.md
@@ -45,7 +45,7 @@ SpEL은 런타임에 객체 참조에 대해 질의하고 조작하는 기능을
 특히 메소드 호출 및 기본 문자열 템플릿 기능을 제공합니다.          
 `@Value`만 사용 가능하다.              
              
-##  @Value   
+## @Value   
 프로퍼티의 `key`를 사용하여 특정한 값을 호출할 수 있다.              
 `key`를 정확히 입력해야 하며 값이 없을 경우에 대해서는 예외 처리를 해주어야 한다.       
     
@@ -101,50 +101,11 @@ public class PropertiesBindingTest {
 `YAML 프로퍼티 파일`에서 설정한 `key/value`를    
 `@Value`의 프로퍼티 값으로 주면 해당 값이 필드값에 할당되는 방식이며 주로 단일 필드값을 가져오는데 사용한다.       
 
-## 4.4. ```@ConfigurationProperties``` 살펴보기    
-```@ConfigurationProperties```의 프로퍼티를 사용하여 다양한 형의 프로퍼티값을 매핑할 수 있습니다.       
-```@ConfigurationProperties```는 기본적으로 접두사를 사용하여 값을 바인딩합니다.       
-아래와 같이 ```fruit```를 키값으로 하여 리스트형의 테스트 데이터를 지정합니다.         
-여기서 ```fruit```는 접두사이자 기본 키값이 됩니다.        
-
-```yml
-fruit:
-  list:
-    - name: banana
-      color: yellow
-    - name: apple
-      color: red
-    - name: water melon
-      color: green
-```
-우선 ```application.yml```에 위 코드를 추가합니다.         
-             
-**전체 application.yml**   
+## @ConfigurationProperties    
+`@ConfigurationProperties`의 프로퍼티를 사용하면 **다양한 타입의 프로퍼티값을 매핑할 수 있다.**      
+`@ConfigurationProperties`는 기본적으로 **접두사를 사용하여 값을 바인딩한다.**          
+    
 ```yml  
-server:
-  port: 80
----
-spring:
-  profiles: local
-server:
-  port: 8080
----
-spring:
-  profiles: dev
-server:
-  port: 8081
----
-spring:
-  profiles: real
-server:
-  port: 8082
----
-property:
-  test:
-    name: property depth test
-propertyTest: test
-propertyTestList: a,b,c
-
 fruit:
   list:
     - name: banana
@@ -154,10 +115,7 @@ fruit:
     - name: water melon
       color: green
 ```   
-        
-이제 원하는 대로 객체에 바인딩 되는지 테스트를 하기위한 클래스를 생성해줍시다.       
-```main``` -> ```java``` -> ```pojo``` 디렉토리 만들고 ```FruitProperty``` 클래스를 생성합니다.          
-      
+            
 **FruitProperty**      
 ```java  
 package com.demo.pojo;
