--- a/01 IoC 컨테이너/06 프로퍼티.md
+++ b/01 IoC 컨테이너/06 프로퍼티.md
@@ -116,22 +116,15 @@ fruit:
       color: green
 ```   
             
-**FruitProperty**      
 ```java  
-package com.demo.pojo;
-
-import lombok.Data;
-import org.springframework.boot.context.properties.ConfigurationProperties;
-import org.springframework.stereotype.Component;
-
-import java.util.List;
-import java.util.Map;
-
-@Data
 @Component
 @ConfigurationProperties("fruit")
-public class FruitProperty {
+public class Fruit {
     private List<Map> list;
+
+    public List<Map> getList() {
+        return list;
+    }
 }
 ```  
       
