--- a/01 IoC 컨테이너/06 프로퍼티.md
+++ b/01 IoC 컨테이너/06 프로퍼티.md
@@ -111,22 +111,51 @@ fruit:
     - name: banana
       color: yellow
     - name: apple
-      color: red
+      full: jangsu apple
     - name: water melon
-      color: green
+      taste: good
 ```   
             
 ```java  
 @Component
 @ConfigurationProperties("fruit")
 public class Fruit {
-    private List<Map> list;
 
-    public List<Map> getList() {
+    private List<Map<String, String>> list;
+
+    public List<Map<String, String>> getList() {
         return list;
     }
+
+    public void setList(List<Map<String, String>> list) {
+        this.list = list;
+    }
 }
+
 ```  
+```java
+@SpringBootTest
+class FruitTest {
+
+    @Autowired
+    Fruit fruit;
+
+    @Test
+    public void test() {
+        List<Map<String, String>> list = fruit.getList();
+        String color = list.get(0).get("color");
+        String full = list.get(1).get("full");
+        String taste = list.get(2).get("taste");
+
+        assertAll(
+                () -> assertThat(color).isEqualTo("banana"),
+                () -> assertThat(full).isEqualTo("jangsu apple"),
+                () -> assertThat(taste).isEqualTo("good")
+        );
+    }
+
+}
+```
       
 원하는 형을 선택하여 ```@Value```보다 더 객체 지향적으로 프로퍼티를 매핑할 수 있습니다.              
 이제 ```application.yml```의 프로퍼티값들은 ```@ConfigurationProperties```를 활용한           
