--- a/01 IoC 컨테이너/06 프로퍼티.md
+++ b/01 IoC 컨테이너/06 프로퍼티.md
@@ -120,18 +120,17 @@ fruit:
 @Component
 @ConfigurationProperties("fruit")
 public class Fruit {
-
     private List<Map<String, String>> list;
+
+    public Fruit(List<Map<String, String>> list) {
+        this.list = list;
+    }
 
     public List<Map<String, String>> getList() {
         return list;
     }
 
-    public void setList(List<Map<String, String>> list) {
-        this.list = list;
-    }
 }
-
 ```  
 ```java
 @SpringBootTest
@@ -148,28 +147,27 @@ class FruitTest {
         String taste = list.get(2).get("taste");
 
         assertAll(
-                () -> assertThat(color).isEqualTo("banana"),
+                () -> assertThat(color).isEqualTo("yellow"),
                 () -> assertThat(full).isEqualTo("jangsu apple"),
                 () -> assertThat(taste).isEqualTo("good")
         );
     }
-
 }
 ```
-      
-원하는 형을 선택하여 ```@Value```보다 더 객체 지향적으로 프로퍼티를 매핑할 수 있습니다.              
-이제 ```application.yml```의 프로퍼티값들은 ```@ConfigurationProperties```를 활용한           
-```FruitProperty``` 클래스의 리스트 필드로 바인딩입니다.           
-        
-```@ConfigurationProperties``` 어노테이션을 사용하려면 클래스를 ```@Component```로 선언을 해야합니다.        
-그래야 이 클래스를 사용할 곳에서 의존성주입을 할 수 있기 때문입니다.          
-여기서는 접두사가 ```fruit```인 프로퍼티가 값을 읽어 와서 필드값에 매핑한다.         
+`@ConfigurationProperties`는 `@Value`보다 객체지향적으로 프로퍼티를 매핑할 수 있다.     
+`list` 라는 프로퍼티 키를 통해 `List<>` 필드로 바인딩할 수 있다.       
+    
+`@ConfigurationProperties`을 사용하려면 스프링 컨테이너에 빈이 등록되어야한다.       
+즉, 클래스를 `@Component`와 같이 빈으로 등록하는 것을 선언을 해야한다.        
+    
+`@ConfigurationProperties`는 `prefix=""`속성을 가지고 있어서     
+프로퍼티 파일에서 일치하는 접두사 키가 있는 값을 읽어 와서 필드값에 매핑한다.           
      
-```application.yml``` 에 한번에 기술하는 것이 아닌 
+그러나 `@ConfigurationProperties`는 `setter`를 기반으로 바인딩을 하기에  
+
+
 ```application-[profiles].yml``` 처럼 파일로 따로 관리할 경우 아래와 같은 코드로 기술해야 한다.         
-```java   
-@ConfigurationProperties(prefix = "fruit")
-```      
+
      
 그리고 ```@Data```는 롬복 코드로서 롬복 플러그인과 라이브러리를 의존성으로 내려받아야 사용할 수 있다.       
 이를 위해서 책에 뒷부분에 있는 부록 설명을 보던가      
