--- a/01 IoC 컨테이너/06 프로퍼티.md
+++ b/01 IoC 컨테이너/06 프로퍼티.md
@@ -163,44 +163,12 @@ class FruitTest {
 `@ConfigurationProperties`는 `prefix=""`속성을 가지고 있어서     
 프로퍼티 파일에서 일치하는 접두사 키가 있는 값을 읽어 와서 필드값에 매핑한다.           
      
-그러나 `@ConfigurationProperties`는 `setter`를 기반으로 바인딩을 하기에  
-
-
-```application-[profiles].yml``` 처럼 파일로 따로 관리할 경우 아래와 같은 코드로 기술해야 한다.         
+그러나 `@ConfigurationProperties`는 기반으로 바인딩을 하기에  
 
      
-그리고 ```@Data```는 롬복 코드로서 롬복 플러그인과 라이브러리를 의존성으로 내려받아야 사용할 수 있다.       
-이를 위해서 책에 뒷부분에 있는 부록 설명을 보던가      
-https://github.com/kwj1270/TIL_SPRINGBOOT_WITH_AWS/blob/master/02%20%EC%8A%A4%ED%94%84%EB%A7%81%EB%B6%80%ED%8A%B8%EC%97%90%EC%84%9C%20%ED%85%8C%EC%8A%A4%ED%8A%B8%20%EC%BD%94%EB%93%9C%20%EC%9E%91%EC%84%B1%ED%95%98%EA%B8%B0.md     
-의 롬복 관련 내용을 봐서 설치하면 될 것 같다.     
    
-이제 생성한 코드가 제대로 동작하는지 ```FruitProperty```를 의존성으로 추가하는 ```PropertyTest```클래스 생성해 테스트해보겠습니다.      
        
-**책에서 나온 코드**
-```java
-@RunWith(SpringRunner.class)
-@SpringBootTest
-public class PropertyTest {
-```
-책에서 나온 코드로는 돌아가지 않는다.   
-1. ```@Component``` 로 올린 객체를 스캔하지 못한다.        
-2. ```@ConfigurationProperties("fruit")``` 로 설정한 객체를 활성화 시키지 않았다.   
-
-1번의 이유는 **프로젝트가 여러 모듈로 나눠서 사용하기에 클래스가 겹칠 수 있으니 어디서 스캔할 것인지를 정확히 명시해줘야 한다**                
-2번의 이유는 사용하는 곳에서 ```@ConfigurationProperties("fruit")```가 쓰여진 클래스를 활성화 시켜주고 사용해야한다.          
-거기다가 2번도 프로젝트가 여러 모듈로 나뉘니 정확한 범위의 클래스를 입력해주는 것이 좋다.         
-
-**수정한 코드**
-```java
-@RunWith(SpringRunner.class)
-@ComponentScan({"com.demo.pojo"})
-@EnableConfigurationProperties(com.demo.pojo.FruitProperty.class)
-@SpringBootTest(classes = {com.demo.pojo.PropertyTest.class})
-public class PropertyTest {
-```
-
-1. ```test``` -> ```java``` -> ```com``` -> ```demo``` -> ```pojo``` 에서 PropertyTest 클래스 생성   
-2. 아래와 같은 코드 입력 
+      
 
 **PropertyTest**    
 ```java
@@ -243,16 +211,6 @@ public class PropertyTest {
         assertThat(fruitData.get(2).get("color"), is("green"));
 
         /*
-        System.out.println(fruitData.get(0).get("name"));
-        System.out.println(fruitData.get(0).get("color"));
-
-        System.out.println(fruitData.get(1).get("name"));
-        System.out.println(fruitData.get(1).get("color"));
-
-        System.out.println(fruitData.get(2).get("name"));
-        System.out.println(fruitData.get(2).get("color"));
-        
-        */
     }
 }
 ```
