--- a/01 IoC 컨테이너/06 프로퍼티.md
+++ b/01 IoC 컨테이너/06 프로퍼티.md
@@ -133,6 +133,11 @@ public class Fruit {
 
 }
 ```  
+* `@ConfigurationProperties()`사용 클래스의 **인스턴스 변수 이름은 프로퍼티 파일의 key 와 일치해야한다.**       
+* 동일한 key 내에 값이 여러개라면 `List<>` 형태로 값을 받아올 수 있다.   
+* 
+
+
 ```java
 @SpringBootTest
 class FruitTest {
