--- a/01 IoC 컨테이너/06 프로퍼티.md
+++ b/01 IoC 컨테이너/06 프로퍼티.md
@@ -116,7 +116,9 @@ fruit:
     - name: water melon
       taste: good
 ```   
-            
+* 대시`(-)`는 목록의 시작 을 나타낸다        
+* 즉, 하나의 목록에 여러 `key/value`값을 넣을 수 있다.   
+          
 ```java  
 @Component
 @ConfigurationProperties("fruit")
@@ -133,11 +135,9 @@ public class Fruit {
 
 }
 ```  
-* `@ConfigurationProperties()`사용 클래스의 **인스턴스 변수 이름은 프로퍼티 파일의 key 와 일치해야한다.**       
-* 동일한 key 내에 값이 여러개라면 `List<>` 형태로 값을 받아올 수 있다.   
-* 
-
-
+* `@ConfigurationProperties()`사용 클래스의 **인스턴스 변수 이름은 프로퍼티 파일의 key 와 일치해야한다.**          
+* 동일한 key 내에 값이 여러개라면 `List<>` 형태로 값을 받아올 수 있다. (이름이 list가 아니어도 괜찮다.)           
+   
 ```java
 @SpringBootTest
 class FruitTest {
@@ -159,78 +159,25 @@ class FruitTest {
         );
     }
 }
-```
-`list` 라는 프로퍼티 키를 통해 `List<>` 필드로 바인딩할 수 있다.       
-    
+```    
 `@ConfigurationProperties`을 사용하려면 스프링 컨테이너에 빈이 등록되어야한다.       
 즉, 클래스를 `@Component`와 같이 빈으로 등록하는 것을 선언을 해야한다.        
-    
-`@ConfigurationProperties`는 `prefix=""`속성을 가지고 있어서     
-프로퍼티 파일에서 일치하는 접두사 키가 있는 값을 읽어 와서 필드값에 매핑한다.           
-     
-그러나 `@ConfigurationProperties`는 기반으로 바인딩을 하기에  
+         
+`@ConfigurationProperties`는 `prefix=""`속성을 가지고 있어서        
+프로퍼티 파일에서 일치하는 접두사 키가 있는 값을 읽어 와서 필드값에 매핑한다.             
+그리고 앞서 언급했듯이 동일 `key`에 여러 항목이 있을 경우 `List<>`로 가져올 수 있다.   
+
+그러나 `@ConfigurationProperties`는 기반으로 바인딩을 하기에    
+
 
      
    
        
-      
-
-**PropertyTest**    
-```java
-package com.demo.pojo;
-
-import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.context.properties.EnableConfigurationProperties;
-import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.context.annotation.ComponentScan;
-import org.springframework.test.context.junit4.SpringRunner;
-
-import java.util.List;
-import java.util.Map;
-
-import static org.hamcrest.Matchers.is;
-import static org.junit.Assert.assertThat;
-
-@RunWith(SpringRunner.class)
-@ComponentScan({"com.demo.pojo"})
-@EnableConfigurationProperties(com.demo.pojo.FruitProperty.class)
-@SpringBootTest(classes = {com.demo.pojo.PropertyTest.class})
-public class PropertyTest {
-
-    @Autowired
-    FruitProperty fruitProperty;
-
-    @Test
-    public void test(){
-        List<Map> fruitData = fruitProperty.getList();
-
-        assertThat(fruitData.get(0).get("name"), is("banana"));
-        assertThat(fruitData.get(0).get("color"), is("yellow"));
-
-        assertThat(fruitData.get(1).get("name"), is("apple"));
-        assertThat(fruitData.get(1).get("color"), is("red"));
-
-        assertThat(fruitData.get(2).get("name"), is("water melon"));
-        assertThat(fruitData.get(2).get("color"), is("green"));
-
-        /*
-    }
-}
-```
 ### 4.4.1. ```@ConfigurationProperties``` 살펴보기 - POJO 방식      
 ```@ConfigurationProperties```는 기본 컬렉션 타입뿐만 아니라 POJO(Plain Old Java Object) 타입 매핑도 지원합니다.    
 기존 ```List<Map> list;``` 방식보다는 ```List<Fruit(POJO)> list``` 이런식으로 사용하는 것이 **직관적이고 명확하게 객체를 구성할 수 있습니다.**      
 
-```
-POJO 방식은 Java EE 와 같은 특정 프레임워크에 종속적이지 않은 자바 객체를 의미한다. -> 옛 
-```
 
-먼저 Fruit POJO 클래스를 생성해줍시다.     
-
-1. ```main``` -> ```java``` -> ```com``` -> ```demo``` -> ```pojo``` 에서 Fruit 클래스 생성  
-2. 아래와 같은 코드 입력   
 
 **Fruit**
 ```java
@@ -244,7 +191,7 @@ public class Fruit {
     private String color;
 }
 ```
-```Fruit``` 클래스를 생성했다면 ```FruitProperty``` 클래스에서 기존의 ```Map``` 타입을 앞서 생성한 ```Fruit``` 타입으로 변경합니다.
+```Fruit``` 클래스를 생성했다면 ```FruitProperty``` 클래스에서 기존의 `Map` 타입을 앞서 생성한 `Fruit` 타입으로 변경합니다.
   
 **FruitProperty**
 ```java
