--- a/01 IoC 컨테이너/06 프로퍼티.md
+++ b/01 IoC 컨테이너/06 프로퍼티.md
@@ -135,9 +135,10 @@ public class Fruit {
 
 }
 ```  
+* `@ConfigurationProperties()`사용 클래스는 `생성자` 또는 `setter`가 반드시 필요하다.       
 * `@ConfigurationProperties()`사용 클래스의 **인스턴스 변수 이름은 프로퍼티 파일의 key 와 일치해야한다.**          
 * 동일한 key 내에 값이 여러개라면 `List<>` 형태로 값을 받아올 수 있다. (이름이 list가 아니어도 괜찮다.)           
-   
+     
 ```java
 @SpringBootTest
 class FruitTest {
@@ -162,24 +163,23 @@ class FruitTest {
 ```    
 `@ConfigurationProperties`을 사용하려면 스프링 컨테이너에 빈이 등록되어야한다.       
 즉, 클래스를 `@Component`와 같이 빈으로 등록하는 것을 선언을 해야한다.        
-         
+           
 `@ConfigurationProperties`는 `prefix=""`속성을 가지고 있어서        
 프로퍼티 파일에서 일치하는 접두사 키가 있는 값을 읽어 와서 필드값에 매핑한다.             
 그리고 앞서 언급했듯이 동일 `key`에 여러 항목이 있을 경우 `List<>`로 가져올 수 있다.   
-
-그러나 `@ConfigurationProperties`는 기반으로 바인딩을 하기에    
-
-
      
-   
-       
-### 4.4.1. ```@ConfigurationProperties``` 살펴보기 - POJO 방식      
-```@ConfigurationProperties```는 기본 컬렉션 타입뿐만 아니라 POJO(Plain Old Java Object) 타입 매핑도 지원합니다.    
-기존 ```List<Map> list;``` 방식보다는 ```List<Fruit(POJO)> list``` 이런식으로 사용하는 것이 **직관적이고 명확하게 객체를 구성할 수 있습니다.**      
+그러나 `@ConfigurationProperties`는 SPEL을 지원안한다는 큰 단점이 있고          
 
 
+      
+        
+### @ConfigurationProperties 심화      
+`@ConfigurationProperties`는 기본 컬렉션 타입뿐만 아니라 POJO 타입 매핑도 지원한다.           
+기존 `List<Map>` 대신, `List<Fruit>`과 같이 **직관적이고 명확하게 객체를 구성할 수 있다.**        
 
-**Fruit**
+``` yml
+```
+
 ```java
 package com.demo.pojo;
 
@@ -190,10 +190,7 @@ public class Fruit {
     private String name;
     private String color;
 }
-```
-```Fruit``` 클래스를 생성했다면 ```FruitProperty``` 클래스에서 기존의 `Map` 타입을 앞서 생성한 `Fruit` 타입으로 변경합니다.
-  
-**FruitProperty**
+```  
 ```java
 package com.demo.pojo;
 
