--- a/01 IoC 컨테이너/06 프로퍼티.md
+++ b/01 IoC 컨테이너/06 프로퍼티.md
@@ -149,14 +149,14 @@ class FruitTest {
     @Test
     public void test() {
         List<Map<String, String>> list = fruit.getList();
-        String color = list.get(0).get("color");
-        String full = list.get(1).get("full");
-        String taste = list.get(2).get("taste");
 
         assertAll(
-                () -> assertThat(color).isEqualTo("yellow"),
-                () -> assertThat(full).isEqualTo("jangsu apple"),
-                () -> assertThat(taste).isEqualTo("good")
+                () -> assertThat(list.get(0).get("name")).isEqualTo("banana"),
+                () -> assertThat(list.get(0).get("color")).isEqualTo("yellow"),
+                () -> assertThat(list.get(1).get("name")).isEqualTo("apple"),
+                () -> assertThat(list.get(1).get("full")).isEqualTo("jangsu apple"),
+                () -> assertThat(list.get(2).get("name")).isEqualTo("water melon"),
+                () -> assertThat(list.get(2).get("taste")).isEqualTo("good")
         );
     }
 }
@@ -168,7 +168,7 @@ class FruitTest {
 프로퍼티 파일에서 일치하는 접두사 키가 있는 값을 읽어 와서 필드값에 매핑한다.             
 그리고 앞서 언급했듯이 동일 `key`에 여러 항목이 있을 경우 `List<>`로 가져올 수 있다.   
      
-그러나 `@ConfigurationProperties`는 SPEL을 지원안한다는 큰 단점이 있고    
+그러나 `@ConfigurationProperties`는 SPEL을 지원안한다는 단점이 있다.         
 
 
 
