--- a/01 IoC 컨테이너/06 프로퍼티.md
+++ b/01 IoC 컨테이너/06 프로퍼티.md
@@ -122,10 +122,10 @@ fruit:
 ```java  
 @Component
 @ConfigurationProperties("fruit")
-public class Fruit {
+public class FruitProperties {
     private List<Map<String, String>> list;
 
-    public Fruit(List<Map<String, String>> list) {
+    public FruitProperties(List<Map<String, String>> list) {
         this.list = list;
     }
 
@@ -141,14 +141,14 @@ public class Fruit {
      
 ```java
 @SpringBootTest
-class FruitTest {
+class FruitPropertiesTest {
 
     @Autowired
-    Fruit fruit;
+    FruitProperties fruitProperties;
 
     @Test
     public void test() {
-        List<Map<String, String>> list = fruit.getList();
+        List<Map<String, String>> list = fruitProperties.getList();
 
         assertAll(
                 () -> assertThat(list.get(0).get("name")).isEqualTo("banana"),
@@ -169,16 +169,20 @@ class FruitTest {
 그리고 앞서 언급했듯이 동일 `key`에 여러 항목이 있을 경우 `List<>`로 가져올 수 있다.   
      
 그러나 `@ConfigurationProperties`는 SPEL을 지원안한다는 단점이 있다.         
-
-
-
-      
         
 ### @ConfigurationProperties 심화      
 `@ConfigurationProperties`는 기본 컬렉션 타입뿐만 아니라 POJO 타입 매핑도 지원한다.           
 기존 `List<Map>` 대신, `List<Fruit>`과 같이 **직관적이고 명확하게 객체를 구성할 수 있다.**        
 
 ``` yml
+fruit:
+  list:
+    - name: banana
+      color: yellow
+    - name: apple
+      color: red
+    - name: water melon
+      color: green
 ```
 
 ```java
