--- a/01 IoC 컨테이너/06 프로퍼티.md
+++ b/01 IoC 컨테이너/06 프로퍼티.md
@@ -184,32 +184,56 @@ fruit:
     - name: water melon
       color: green
 ```
-
 ```java
-package com.demo.pojo;
-
-import lombok.Data;
-
-@Data
 public class Fruit {
     private String name;
     private String color;
+
+    public Fruit() {
+    }
+
+    public Fruit(String name, String color) {
+        this.name = name;
+        this.color = color;
+    }
+
+    public String getColor() {
+        return color;
+    }
+
+    public String getName() {
+        return name;
+    }
+
+    public void setColor(String color) {
+        this.color = color;
+    }
+
+    public void setName(String name) {
+        this.name = name;
+    }
+    
 }
 ```  
 ```java
-package com.demo.pojo;
-
-import lombok.Data;
-import org.springframework.boot.context.properties.ConfigurationProperties;
-import org.springframework.stereotype.Component;
-
-import java.util.List;
-
-@Data
 @Component
 @ConfigurationProperties("fruit")
-public class FruitProperty {
+public class FruitProperties {
     private List<Fruit> list;
+
+    public FruitProperties() {}
+
+    public FruitProperties(List<Fruit> list) {
+        this.list = list;
+    }
+
+    public List<Fruit> getFruits() {
+        return list;
+    }
+
+    public void setList(List<Fruit> list) {
+        this.list = list;
+    }
 }
 ```
 ```PropertyTest``` 클래스에서 ```Map``` 의 ```get()``` 메소드가 아닌        
@@ -217,55 +241,24 @@ public class FruitProperty {
     
 **PropertTest**
 ```java
-package com.demo.pojo;
-
-import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.context.properties.EnableConfigurationProperties;
-import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.context.annotation.ComponentScan;
-import org.springframework.test.context.junit4.SpringRunner;
-
-import java.util.List;
-import java.util.Map;
-
-import static org.hamcrest.Matchers.is;
-import static org.junit.Assert.assertThat;
-
-@RunWith(SpringRunner.class)
-@ComponentScan({"com.demo.pojo"})
-@EnableConfigurationProperties(com.demo.pojo.FruitProperty.class)
-@SpringBootTest(classes = {com.demo.pojo.PropertyTest.class})
-public class PropertyTest {
+@SpringBootTest
+class FruitPropertiesTest {
 
     @Autowired
-    FruitProperty fruitProperty;
+    FruitProperties fruitProperties;
 
     @Test
-    public void test(){
-        List<Fruit> fruitData = fruitProperty.getList();
+    public void test() {
+        List<Fruit> list = fruitProperties.getFruits();
 
-        assertThat(fruitData.get(0).getName(), is("banana"));
-        assertThat(fruitData.get(0).getColor(), is("yellow"));
-
-        assertThat(fruitData.get(1).getName(), is("apple"));
-        assertThat(fruitData.get(1).getColor(), is("red"));
-
-        assertThat(fruitData.get(2).getName(), is("water melon"));
-        assertThat(fruitData.get(2).getColor(), is("green"));
-
-        /*
-        System.out.println(fruitData.get(0).get("name"));
-        System.out.println(fruitData.get(0).get("color"));
-
-        System.out.println(fruitData.get(1).get("name"));
-        System.out.println(fruitData.get(1).get("color"));
-
-        System.out.println(fruitData.get(2).get("name"));
-        System.out.println(fruitData.get(2).get("color"));
-
-        */
+        assertAll(
+                () -> assertThat(list.get(0).getName()).isEqualTo("banana"),
+                () -> assertThat(list.get(0).getColor()).isEqualTo("yellow"),
+                () -> assertThat(list.get(1).getName()).isEqualTo("apple"),
+                () -> assertThat(list.get(1).getColor()).isEqualTo("red"),
+                () -> assertThat(list.get(2).getName()).isEqualTo("water melon"),
+                () -> assertThat(list.get(2).getColor()).isEqualTo("green")
+        );
     }
 }
 ```    
