--- a/01 IoC 컨테이너/06 프로퍼티.md
+++ b/01 IoC 컨테이너/06 프로퍼티.md
@@ -236,10 +236,6 @@ public class FruitProperties {
     }
 }
 ```
-```PropertyTest``` 클래스에서 ```Map``` 의 ```get()``` 메소드가 아닌        
-```Fruit```의 객체 메서드(getter)를 사용하여 name 과 color 값을 읽어올 수 있습니다.         
-    
-**PropertTest**
 ```java
 @SpringBootTest
 class FruitPropertiesTest {
@@ -261,9 +257,14 @@ class FruitPropertiesTest {
         );
     }
 }
-```    
-이제 똑같이 Run을 시켜줘서 문제가 없으면 성공인 것입니다.    
-
+```      
+`POJO 방식으로 프로퍼티 바인딩`을 하면서 재미있는 점을 발견했다.         
+이전 `List` 또는 `Map`에 대해서는 `생성자` 또는 `etter` 둘 중 하나만 설정해줘도 괜찮았지만              
+`POJO 방식으로 프로퍼티 바인딩`은 `기본 생성자 + setter`가 필수적으로 존재해야한다.                  
+예컨대, **리플랙션 방식으로 객체를 생성한 뒤 setter를 통해 주입을 하는 것 같다.**         
+이러한 특징 때문에 한 가지 문제가 있는데 **인스턴스 변수에 final 을 사용할 수 없다.**      
+(바이트 코드를 통해서 동작을 확인할 수 있을까요..? 테스트 해보고 싶네요)        
+  
 ## 4.5. ```@ConfigurationProperties``` 의 유연한 바인딩   
 ```@ConfigurationProperties``` 에서 유연한 바인딩이란    
 프로퍼티값을 객체에 바인딩할 경우 필드를 낙타 표기법으로 선언하고    
