--- a/01 IoC 컨테이너/06 프로퍼티.md
+++ b/01 IoC 컨테이너/06 프로퍼티.md
@@ -269,16 +269,71 @@ class FruitPropertiesTest {
 ```@ConfigurationProperties``` 에서 유연한 바인딩이란    
 프로퍼티값을 객체에 바인딩할 경우 필드를 낙타 표기법으로 선언하고    
 프로퍼티의 키는 다양한 형식으로 선언하여 바인딩할 수 있는 것을 말합니다.   
-      
-**예시 코드 - 작성x**
+
+```yml
+fruit:
+  fruits:
+    - fruit-name: banana
+      fruit-color: yellow
+    - fruit-name: apple
+      fruit-color: red
+    - fruit-name: water melon
+      fruit-color: green
+```
 ```java
-@Data
-@Component
-@ConfigurationProperties("fruit")
-public class FruitProperty {
-    private String colorName;
+public class Fruit {
+    private String fruitName;
+    private String fruitColor;
+
+    public Fruit() {
+    }
+
+    public Fruit(String fruitName, String fruitColor) {
+        this.fruitName = fruitName;
+        this.fruitColor = fruitColor;
+    }
+
+    public String color() {
+        return fruitColor;
+    }
+
+    public String name() {
+        return fruitName;
+    }
+
+    public void setFruitColor(String fruitColor) {
+        this.fruitColor = fruitColor;
+    }
+
+    public void setFruitName(String fruitName) {
+        this.fruitName = fruitName;
+    }
+
 }
 ```
+```java
+@SpringBootTest
+class FruitPropertiesTest {
+
+    @Autowired
+    FruitProperties fruitProperties;
+
+    @Test
+    public void test() {
+        List<Fruit> fruits = fruitProperties.getFruits();
+
+        assertAll(
+                () -> assertThat(fruits.get(0).name()).isEqualTo("banana"),
+                () -> assertThat(fruits.get(0).color()).isEqualTo("yellow"),
+                () -> assertThat(fruits.get(1).name()).isEqualTo("apple"),
+                () -> assertThat(fruits.get(1).color()).isEqualTo("red"),
+                () -> assertThat(fruits.get(2).name()).isEqualTo("water melon"),
+                () -> assertThat(fruits.get(2).color()).isEqualTo("green")
+        );
+    }
+}
+```
+
 ```colorName``` 필드를 선언했습니다.     
 이제 프로퍼티명을 지어서 필드에 바인딩해보겠습니다.       
 놀랍게도 다음과 같이 다양한 프로퍼티명이 모두 colorName 필드에 바인딩 될 수 있습니다.         
