--- a/01 IoC 컨테이너/06 프로퍼티.md
+++ b/01 IoC 컨테이너/06 프로퍼티.md
@@ -170,7 +170,7 @@ class FruitPropertiesTest {
      
 그러나 `@ConfigurationProperties`는 SPEL을 지원안한다는 단점이 있다.         
         
-### @ConfigurationProperties 심화      
+### @ConfigurationProperties 심화 - POJO      
 `@ConfigurationProperties`는 기본 컬렉션 타입뿐만 아니라 POJO 타입 매핑도 지원한다.           
 기존 `List<Map>` 대신, `List<Fruit>`과 같이 **직관적이고 명확하게 객체를 구성할 수 있다.**        
 
@@ -264,12 +264,12 @@ class FruitPropertiesTest {
 예컨대, **리플랙션 방식으로 객체를 생성한 뒤 setter를 통해 주입을 하는 것 같다.**         
 이러한 특징 때문에 한 가지 문제가 있는데 **인스턴스 변수에 final 을 사용할 수 없다.**      
 (바이트 코드를 통해서 동작을 확인할 수 있을까요..? 테스트 해보고 싶네요)        
-  
-## 4.5. ```@ConfigurationProperties``` 의 유연한 바인딩   
-```@ConfigurationProperties``` 에서 유연한 바인딩이란    
-프로퍼티값을 객체에 바인딩할 경우 필드를 낙타 표기법으로 선언하고    
-프로퍼티의 키는 다양한 형식으로 선언하여 바인딩할 수 있는 것을 말합니다.   
-
+    
+### @ConfigurationProperties 심화 - 유연한 바인딩       
+`@ConfigurationProperties` 에서의 유연한 바인딩이란        
+**프로퍼티 파일의 key**는 **다양한 형식**으로 선언할 수 있으며         
+**객체에서의 인스턴스 변수**는 **낙타 표기법**으로 선언하여 바인딩할 수 있는 것을 의미한다.     
+   
 ```yml
 fruit:
   fruits:
@@ -280,6 +280,15 @@ fruit:
     - fruit-name: water melon
       fruit-color: green
 ```
+* fruit-name   
+* ~~fruitName~~ 
+* ~~fruit_name~~    
+* ~~Fruitname~~     
+       
+프로퍼티 파일들의 `key`는 다양한 방식으로 세팅할 수 **있었다.**        
+기존 버전에서는 프로퍼티명에 낙타표기법, 언더바 표기법, 대문자 등을 모두 지원했지만       
+스프링부트 2.0 부터는 소문자나 케밥 표기법만 지원하는 것으로 바뀌었다.        
+    
 ```java
 public class Fruit {
     private String fruitName;
@@ -333,20 +342,9 @@ class FruitPropertiesTest {
     }
 }
 ```
+다양한 프로퍼티명이 모두 colorName 필드에 바인딩 될 수 있습니다.         
+         
 
-```colorName``` 필드를 선언했습니다.     
-이제 프로퍼티명을 지어서 필드에 바인딩해보겠습니다.       
-놀랍게도 다음과 같이 다양한 프로퍼티명이 모두 colorName 필드에 바인딩 될 수 있습니다.         
-   
-* fruit.color-name    
-* fruit.color_name    
-* fruit.colorName    
-* fruit.Colorname     
-      
-```
-기존 버전에서는 프로퍼티명에 낙타표기법, 언더바 표기법, 대문자 등을 모두 지원했지만   
-스프링부트 2.0 부터는 소문자나 케밥 표기법만 지원합니다.   
-```
 
 *** 
 # 5. 자동 환경 설정 이해하기         
