--- a/01 IoC 컨테이너/06 프로퍼티.md
+++ b/01 IoC 컨테이너/06 프로퍼티.md
@@ -287,8 +287,8 @@ fruit:
        
 프로퍼티 파일들의 `key`는 다양한 방식으로 세팅할 수 **있었다.**        
 기존 버전에서는 프로퍼티명에 낙타표기법, 언더바 표기법, 대문자 등을 모두 지원했지만       
-스프링부트 2.0 부터는 소문자나 케밥 표기법만 지원하는 것으로 바뀌었다.        
-    
+**스프링부트 2.0 부터는 소문자나 케밥 표기법만 지원하는 것으로 바뀌었다.**           
+      
 ```java
 public class Fruit {
     private String fruitName;
@@ -342,12 +342,8 @@ class FruitPropertiesTest {
     }
 }
 ```
-다양한 프로퍼티명이 모두 colorName 필드에 바인딩 될 수 있습니다.         
-         
 
-
-*** 
-# 5. 자동 환경 설정 이해하기         
+# AutoConfiguration 자동 환경 설정 이해하기         
 자동 환경 설정은 스프링 부트의 장점이며 매우 중요한 역할을 수행합니다.               
 스프링 부트의 자동 설정 (Spring Boot auto-configuration)은 Web, H2, JDBC를 비롯해 약 100여 개의 자동 설정을 제공합니다.            
 그리고 새로 추가되는 라이브러리(JAR)는 스프링 부트 자동-설정 의존성에 따라서 설정이 자동 적용됩니다.            
