--- a/01 IoC 컨테이너/06 프로퍼티.md
+++ b/01 IoC 컨테이너/06 프로퍼티.md
@@ -288,7 +288,9 @@ fruit:
 프로퍼티 파일들의 `key`는 다양한 방식으로 세팅할 수 **있었다.**        
 기존 버전에서는 프로퍼티명에 낙타표기법, 언더바 표기법, 대문자 등을 모두 지원했지만       
 **스프링부트 2.0 부터는 소문자나 케밥 표기법만 지원하는 것으로 바뀌었다.**           
-      
+
+## @PropertySource   
+
 ```java
 public class Fruit {
     private String fruitName;
