--- a/01 IoC 컨테이너/06 프로퍼티.md
+++ b/01 IoC 컨테이너/06 프로퍼티.md
@@ -290,9 +290,7 @@ fruit:
 프로퍼티 파일들의 `key`는 다양한 방식으로 세팅할 수 **있었다.**        
 기존 버전에서는 프로퍼티명에 낙타표기법, 언더바 표기법, 대문자 등을 모두 지원했지만       
 **스프링부트 2.0 부터는 소문자나 케밥 표기법만 지원하는 것으로 바뀌었다.**           
-
-## @PropertySource   
-
+     
 ```java
 public class Fruit {
     private String fruitName;
@@ -346,6 +344,15 @@ class FruitPropertiesTest {
     }
 }
 ```
+  
+## @PropertySource   
+`@PropertySource`는 `스프링 3.1`부터 도입된 어노테이션으로 프로퍼티 설정을 보다 편리하게 해준다.          
+주로 `@PropertySource`로 읽은 파일을 `Enviroment`를 통해 추출해서 사용하는 방식이다.     
+
+
+
+
+
 
 # AutoConfiguration 자동 환경 설정 이해하기         
 자동 환경 설정은 스프링 부트의 장점이며 매우 중요한 역할을 수행합니다.               
