--- a/01 IoC 컨테이너/06 프로퍼티.md
+++ b/01 IoC 컨테이너/06 프로퍼티.md
@@ -346,12 +346,84 @@ class FruitPropertiesTest {
 ```
   
 ## @PropertySource   
-`@PropertySource`는 `스프링 3.1`부터 도입된 어노테이션으로 프로퍼티 설정을 보다 편리하게 해준다.          
-주로 `@PropertySource`로 읽은 파일을 `Enviroment`를 통해 추출해서 사용하는 방식이다.     
+`@PropertySource`는 `스프링 3.1`부터 도입된 어노테이션으로 프로퍼티 설정을 보다 편리하게 해준다.        
+보다 정확히 말하면 사용할 프로퍼티 파일을 직접 정할 수 있도록 도와준다.        
+그렇기에 `@Value`나 `ConfigurationProperties`와 같이 사용하기 편리하다.       
+다른 방법으로는 `@PropertySource`로 읽은 프로퍼티 파일을 `Enviroment`를 통해 추출해서 사용하기도 한다.   
 
+```yml
+property:
+  test:
+    name: property depth test
+propertyTest: test
+propertyTestList: a,b,c
+```
+```java
+@SpringBootTest
+@PropertySource("classpath:/application.yml")
+public class PropertySourceTest {
 
+    @Autowired
+    Environment environment;
 
+    @Test
+    public void test() {
+        assertAll(
+                () -> assertThat(environment.getProperty("property.test.name")).isEqualTo("property depth test"),
+                () -> assertThat(environment.getProperty("propertyTest")).isEqualTo("test"),
+                () -> assertThat(environment.getProperty("propertyTestList")).isEqualTo("a,b,c")
+        );
+    }
+}
+```  
 
+### @PropertySources
+`@PropertySources` 는 여러 프로퍼티 파일들을 선언할 때 사용된다.   
+   
+```java
+@PropertySource({
+        "classpath:/application.yml",
+        "classpath:/application.properties"
+})
+```
+사실, 일반 `@PropertySource`도 다양한 프로퍼티 파일들을 불러올 수 있지만  
+`name`, `ignoreResourceNotFound`, `encoding`, `factory`에 대한 설정을 동일하게 해야한다.     
+
+```java
+@PropertySources({
+        @PropertySource("classpath:/application.yml"),
+        @PropertySource("classpath:/application.properties")})
+```
+반대로, `@PropertySources`는 값으로 `@PropertySource`를 가지기 때문에       
+각각의 프로퍼티 파일마다 다른 속성값을 주고 이를 불러올 수 있다.       
+      
+```properties
+my.name=kwj1270
+my.job=developer
+```
+```java
+@SpringBootTest
+@PropertySources({
+        @PropertySource("classpath:/application.yml"),
+        @PropertySource("classpath:/application.properties")})
+public class PropertySourceTest {
+
+    @Autowired
+    Environment environment;
+
+    @Test
+    public void test() {
+        assertAll(
+                () -> assertThat(environment.getProperty("my.name")).isEqualTo("kwj1270"),
+                () -> assertThat(environment.getProperty("my.job")).isEqualTo("developer"),
+                () -> assertThat(environment.getProperty("property.test.name")).isEqualTo("property depth test"),
+                () -> assertThat(environment.getProperty("propertyTest")).isEqualTo("test"),
+                () -> assertThat(environment.getProperty("propertyTestList")).isEqualTo("a,b,c")
+        );
+
+    }
+}
+```
 
 
 # AutoConfiguration 자동 환경 설정 이해하기         
