--- a/01 IoC 컨테이너/06 프로퍼티.md
+++ b/01 IoC 컨테이너/06 프로퍼티.md
@@ -265,8 +265,32 @@ class FruitPropertiesTest {
 `POJO 방식으로 프로퍼티 바인딩`은 `기본 생성자 + setter`가 필수적으로 존재해야한다.                  
 예컨대, **리플랙션 방식으로 객체를 생성한 뒤 setter를 통해 주입을 하는 것 같다.**         
 이러한 특징 때문에 한 가지 문제가 있는데 **인스턴스 변수에 final 을 사용할 수 없다.**      
-(바이트 코드를 통해서 동작을 확인할 수 있을까요..? 테스트 해보고 싶네요)        
-    
+
+```java
+@Component
+@ConstructorBinding
+@ConfigurationProperties("fruit")
+public class FruitProperties {
+    private List<Fruit> fruits;
+
+    public FruitProperties() {}
+
+    public FruitProperties(List<Fruit> fruits) {
+        this.fruits = fruits;
+    }
+
+    public List<Fruit> getFruits() {
+        return fruits;
+    }
+
+    public void setFruits(List<Fruit> fruits) {
+        this.fruits = fruits;
+    }
+}
+```
+`@ConstructorBinding` 을 이용해서 생성자 바인딩을 우선시할 수는 있지만    
+그럼에도 `setter`가 없다면 `IllegalStateException`이 발생한다.        
+         
 ### @ConfigurationProperties 심화 - 유연한 바인딩       
 `@ConfigurationProperties` 에서의 유연한 바인딩이란        
 **프로퍼티 파일의 key**는 **다양한 형식**으로 선언할 수 있으며         
