--- a/01 IoC 컨테이너/06 프로퍼티.md
+++ b/01 IoC 컨테이너/06 프로퍼티.md
@@ -50,7 +50,12 @@ SpEL은 런타임에 객체 참조에 대해 질의하고 조작하는 기능을
 ## @Value   
 프로퍼티의 `key`를 사용하여 특정한 값을 호출할 수 있다.              
 `key`를 정확히 입력해야 하며 값이 없을 경우에 대해서는 예외 처리를 해주어야 한다.       
-    
+
+**@Value 대상**
+* 필드
+* 메소드 파라미터
+* 생성자 파라미터
+
 ```yml
 property:
   test:
@@ -373,8 +378,9 @@ class FruitPropertiesTest {
 `@PropertySource`는 `스프링 3.1`부터 도입된 어노테이션으로 프로퍼티 설정을 보다 편리하게 해준다.        
 보다 정확히 말하면 사용할 프로퍼티 파일을 직접 정할 수 있도록 도와준다.        
 그렇기에 `@Value`나 `ConfigurationProperties`와 같이 사용하기 편리하다.       
-다른 방법으로는 `@PropertySource`로 읽은 프로퍼티 파일을 `Enviroment`를 통해 추출해서 사용하기도 한다.   
-
+이외에도 `@PropertySource`로 읽은 프로퍼티 파일을 `Enviroment`를 통해 추출해서 사용하기도 한다.         
+특히, multi module 환경에서 상위 모듈에 지정된 property 값을 특정 모듈에서는 다른 값을 재 지정해서 쓸 수 있다.       
+   
 ```yml
 property:
   test:
