--- a/01 IoC 컨테이너/06 프로퍼티.md
+++ b/01 IoC 컨테이너/06 프로퍼티.md
@@ -378,9 +378,13 @@ class FruitPropertiesTest {
 `@PropertySource`는 `스프링 3.1`부터 도입된 어노테이션으로 프로퍼티 설정을 보다 편리하게 해준다.        
 보다 정확히 말하면 사용할 프로퍼티 파일을 직접 정할 수 있도록 도와준다.        
 그렇기에 `@Value`나 `ConfigurationProperties`와 같이 사용하기 편리하다.       
-이외에도 `@PropertySource`로 읽은 프로퍼티 파일을 `Enviroment`를 통해 추출해서 사용하기도 한다.         
-특히, multi module 환경에서 상위 모듈에 지정된 property 값을 특정 모듈에서는 다른 값을 재 지정해서 쓸 수 있다.       
-   
+이외에도 `@PropertySource`로 읽은 프로퍼티 파일을 `Enviroment`를 통해 추출해서 사용하기도 한다.          
+  
+이러한 특징을 잘 활용하면,      
+멀티 모듈 환경에서 상위 모듈에 지정된 property 값을 특정 모듈에서는 다른 값을 재 지정해서 쓸 수 있다.           
+(물론, Spring Cloud Config를 사용하는 게 더 좋은 방법이지만 ui 노출 변수 관리 같이 사용 편의성이 좀 더 중요한 경우 아래 방법을 고려해볼 만하다.
+  
+  
 ```yml
 property:
   test:
@@ -1123,13 +1127,6 @@ java -jar [jar파일명].jar --spring.profiles.active=dev
 ```Edit Configurations``` 버튼을 눌러 ```Run/Debug configurations``` 창을 실행하고     
 스프링 부트 플러그인의 프로파일 값을 할당하면 됩니다.      
 
-**얼티메이트와 커뮤니티는 Application 타입이 달라서 환경이 다르다**    
-커뮤니티를 기준으로 ```VM options:```에 ```-Dspring.profiles.active=dev```로 설정해주면된다.   
-   
-[사진]   
-    
-YAML 파일을 사용하면 깊이에 따라 관계를 구분 짓기 때문에      
-```List```, ```Set```, ```Map``` 등 다양한 바인딩형 매핑이 훨씬 편합니다.     
-      
-YAML 파일에 있는 데이터를 가져와서 사용하는 방법은 다양합니다. (properties의 매핑 방법도 같습니다.)          
+# 참고 
 
+출처: https://luvstudy.tistory.com/99 [파란하늘의 지식창고]
