--- a/01 IoC 컨테이너/06 프로퍼티.md
+++ b/01 IoC 컨테이너/06 프로퍼티.md
@@ -46,7 +46,7 @@ server:
 SpEL은 런타임에 객체 참조에 대해 질의하고 조작하는 기능을 지원하는 언어다.              
 특히 메소드 호출 및 기본 문자열 템플릿 기능을 제공합니다.          
 `@Value`만 사용 가능하다.              
-             
+
 ## @Value   
 프로퍼티의 `key`를 사용하여 특정한 값을 호출할 수 있다.              
 `key`를 정확히 입력해야 하며 값이 없을 경우에 대해서는 예외 처리를 해주어야 한다.       
@@ -382,9 +382,10 @@ class FruitPropertiesTest {
   
 이러한 특징을 잘 활용하면,      
 멀티 모듈 환경에서 상위 모듈에 지정된 property 값을 특정 모듈에서는 다른 값을 재 지정해서 쓸 수 있다.           
-(물론, Spring Cloud Config를 사용하는 게 더 좋은 방법이지만 ui 노출 변수 관리 같이 사용 편의성이 좀 더 중요한 경우 아래 방법을 고려해볼 만하다.
-  
-  
+      
+물론, Spring Cloud Config를 사용하는 게 더 좋은 방법이지만        
+`ui 노출 변수 관리` 같이 사용 편의성이 좀 더 중요한 경우 고려해볼 만하다.      
+      
 ```yml
 property:
   test:
@@ -410,7 +411,10 @@ public class PropertySourceTest {
     }
 }
 ```  
-
+   
+**참고**   
+[properySource 우선순위](https://docs.spring.io/spring-boot/docs/2.2.2.RELEASE/reference/html/spring-boot-features.html#boot-features-external-config)
+   
 ### @PropertySources
 `@PropertySources` 는 여러 프로퍼티 파일들을 선언할 때 사용된다.   
    
