--- a/01 IoC 컨테이너/06 프로파일.md
+++ b/01 IoC 컨테이너/06 프로파일.md
@@ -5,6 +5,44 @@
       
 이를 해결하기 위해 **`로컬(local)`, `개발(dev)`, `테스트(test)`, `운영(prod)`에 대해서 각기 설정 값을 다르게** 하고 있으며        
 번거롭지 않게 **파일로 관리해 배포 환경에 따라 설정할 수 있도록 스프링 프로파일이라는 기능을 사용한다.**    
+    
+**스프링 프로파일이란?**        
+일종의 **빈들의 그룹**이라고 표현을 할 수 있으며           
+애플리케이션 구성의 일부를 분리하고 특정 환경에서만 사용할 수 있도록 하는 방법을 제공한다.           
+즉, 각각의 프로필에 설정된 값들은 다른 프로필에 간섭받지 않고 독립적인 작업을 수행한다.          
+
+
+
+
+
+
+
+
+● getEnvironment()
+프로파일
+● 빈들의 그룹
+● Environment의 역할은 활성화할 프로파일 확인 및 설정
+프로파일 유즈케이스
+● 테스트 환경에서는 A라는 빈을 사용하고, 배포 환경에서는 B라는 빈을 쓰고 싶다.
+● 이 빈은 모니터링 용도니까 테스트할 때는 필요가 없고 배포할 때만 등록이 되면
+좋겠다.
+프로파일 정의하기
+● 클래스에 정의
+○ @Configuration @Profile(“test”)
+○ @Component @Profile(“test”)
+● 메소드에 정의
+○ @Bean @Profile(“test”)
+
+프로파일 설정하기
+● -Dspring.profiles.avtive=”test,A,B,...”
+● @ActiveProfiles (테스트용)
+프로파일 표현식
+● ! (not)
+● & (and)
+● | (or)
+
+
+# Profile
 
 
 
