--- a/01 IoC 컨테이너/06 프로파일.md
+++ b/01 IoC 컨테이너/06 프로파일.md
@@ -4,7 +4,7 @@
 예를 들면, `datasource`, `폴더 경로`, `외부 테스트 모듈 경로`등과 같은 설정 값들 말이다.         
       
 이를 해결하기 위해 **`로컬(local)`, `개발(dev)`, `테스트(test)`, `운영(prod)`에 대해서 설정 값을 다르게** 하고 있으며        
-번거롭지 않게 **파일로 관리해 배포 환경에 따라 설정할 수 있도록 스프링 프로파일이라는 기능을 사용한다.**    
+번거롭지 않게 **파일로 관리해 배포 환경에 따라 설정할 수 있도록 `스프링 프로파일`이라는 기능을 사용한다.**    
       
 **스프링 프로파일이란?**          
 일종의 **빈들의 그룹**이라고 표현을 할 수 있으며              
