--- a/01 IoC 컨테이너/06 프로파일.md
+++ b/01 IoC 컨테이너/06 프로파일.md
@@ -16,6 +16,8 @@
 애플리케이션의 `profile`이 `@Profile("프로파일 값")`과 일치하지 않을 경우 빈 등록을 진행하지도 않는다.        
 말 그대로 `@Profile("프로파일 값")`이 일치해야 동작을 수행하도록 제한을 두는 것이다.    
 
+```java
 
+```
 
 
