--- a/01 IoC 컨테이너/06 프로파일.md
+++ b/01 IoC 컨테이너/06 프로파일.md
@@ -15,9 +15,30 @@
 스프링 빈(Bean)에 대해서 그룹핑을 진행해주는 어노테이션이다.               
 애플리케이션의 `profile`이 `@Profile("프로파일 값")`과 일치하지 않을 경우 빈 등록을 진행하지도 않는다.        
 말 그대로 `@Profile("프로파일 값")`이 일치해야 동작을 수행하도록 제한을 두는 것이다.    
+  
+## @Profile("default") 의 사실과 오해  
+```java
+@Profile("default")
+```   
+**스프링의 기본 profile 전략은 `"default"`이다.**      
+그렇기에 대다수의 빈들이 위와 같은 어노테이션을 사용하고 있을거라 생각이 들 수 있다.   
+하지만, 이는 사실이 아니다.   
 
 ```java
+@Profile("default")
+@Component
+public class ComponentProfileTarget {
+}
+```   
+명시적으로 `@Profile("default")`을 정의하면 해당 프로필에서만 빈이 동작을 할 것이다.      
+   
+```java
+@Component
+public class ComponentProfileTarget {
+}
+```   
+그렇
 
-```
+
 
 
