--- a/01 IoC 컨테이너/06 프로파일.md
+++ b/01 IoC 컨테이너/06 프로파일.md
@@ -71,7 +71,19 @@ public class ProfileConfiguration {
 public class ComponentProfileTarget {
 }
 ```
-`@Component 클래스`에 `@Profile`을 사용해서 빈을 등록할 수 있다.      
+`@Component 클래스`에 `@Profile`을 사용해서 빈을 등록할 수 있다.     
+
+## 프로퍼티 파일 profile 설정    
+    
+**application.properties**
+```properties    
+spring.profiles.active=local
+```
+프로퍼티 파일에 `spring.profiles.active=[]`에 넣은 값으로 프로파일로 실행이 된다.           
+
+
+# 참고 
+[#](https://docs.spring.io/spring-boot/docs/1.2.0.M1/reference/html/boot-features-profiles.html)    
 
 
 
