--- a/01 IoC 컨테이너/06 프로파일.md
+++ b/01 IoC 컨테이너/06 프로파일.md
@@ -81,7 +81,11 @@ spring.profiles.active=local
 ```
 프로퍼티 파일에 `spring.profiles.active=[]`에 넣은 값으로 프로파일로 실행이 된다.           
 
-
+```properties
+spring.profiles.active=dev, hsqldb
+```
+물론, 2개 이상의 프로파일도 설정할 수 있다.     
+    
 # 참고 
 [#](https://docs.spring.io/spring-boot/docs/1.2.0.M1/reference/html/boot-features-profiles.html)    
 
