--- a/01 IoC 컨테이너/06 프로파일.md
+++ b/01 IoC 컨테이너/06 프로파일.md
@@ -32,7 +32,17 @@
   * @Component @Profile(“test”)   
 * **메소드에 정의**    
   * @Bean @Profile(“test”)   
-  
+
+## @Profile 표현식  
+```java
+@Profile("!default")
+```
+
+`@Profile`에는 아래와 같은 표현식을 사용할 수 있다.           
+* `!` : (not)  
+* `&` : (and)  
+* `|` : (or)   
+
 ## @Profile("default") 의 사실과 오해  
 ```java
 @Profile("default")
