--- a/01 IoC 컨테이너/06 프로파일.md
+++ b/01 IoC 컨테이너/06 프로파일.md
@@ -105,7 +105,21 @@ spring.profiles.active=local
 spring.profiles.active=dev, hsqldb
 ```
 물론, 2개 이상의 프로파일도 설정할 수 있다.     
-    
+
+## 배포 환경 Profile에 따라 properties 설정하기  
+스프링 부트에서도 스프링 프로파일 기능으로 간단하게 `.properties` 파일들로 배포환경 설정을 관리 할 수 있다.     
+아래와 같은 형태로 배포 환경에 따라 .properties을 만들어주면 알아서 해당 프로퍼티로 실행을 한다.       
+
+```text
+application-{Profile ID}.properties
+```
+```text
+application.properties       //프로젝트 공통 설정 파일
+application-local.properties //로컬 설정 파일
+application-dev.properties   //개발 설정 파일
+application-prod.properties  //운영 설정 파일
+```
+
 # 참고 
 [#](https://docs.spring.io/spring-boot/docs/1.2.0.M1/reference/html/boot-features-profiles.html)    
 
