--- a/01 IoC 컨테이너/06 프로파일.md
+++ b/01 IoC 컨테이너/06 프로파일.md
@@ -93,6 +93,7 @@ public class ComponentProfileTarget {
 ```
 `@Component 클래스`에 `@Profile`을 사용해서 빈을 등록할 수 있다.     
 
+# 프로파일과 프로퍼티 
 ## 프로퍼티 파일 profile 설정    
     
 **application.properties**
